Update dev container configuration

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -34,6 +34,7 @@
 			"extensions": [
 				"vscjava.vscode-java-pack", // Extension Pack for Java
 				"vmware.vscode-boot-dev-pack", // Spring Boot Extension Pack
+				"redhat.fabric8-analytics", // Dependency Analytics
 				"mutantdino.resourcemonitor", // Resource Monitor
 				"mongodb.mongodb-vscode" // MongoDB for VS Code
 			]
