--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   workspace:
     build: .
     volumes:
-      - ../..:/workspaces:cached
+      - ../..:/workspaces:delegated
     command: sleep infinity
 
   db:
