--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -33,12 +33,15 @@
 			// Set *default* container specific settings.json values on container create.
 			"settings": {
 				// Workaround for vscode-java extension not hornoring JAVA_HOME if the extension's built-in Java version happened to be the same
-				"java.configuration.runtimes": [
-					{
-						"name": "JavaSE-17", // Must match the version of the path below
-						"path": "/usr/lib/jvm/java-17-openjdk-amd64" // Hardcoded for now (TODO)
-					} 
-				]
+				//"java.configuration.runtimes": [
+				//	{
+				//		"name": "JavaSE-17", // Must match the version of the path below
+				//		"path": "/usr/lib/jvm/java-17-openjdk-amd64" // Hardcoded for now (TODO)
+				//	} 
+				//]
+				"java.sharedIndexes.enabled":"on",
+				"java.jdt.ls.java.home": "/usr/lib/jvm/java-17-openjdk-amd64", // For both the Java language server and the default project JDK
+				"spring-boot.ls.java.home": "/usr/lib/jvm/java-17-openjdk-amd64" // For Spring Boot language server
 			},
 			"extensions": [
 				"vscjava.vscode-java-pack", // Extension Pack for Java
