--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -61,6 +61,7 @@
 
 				// JavaScript
 				"dbaeumer.vscode-eslint", // ESLint
+				"dsznajder.es7-react-js-snippets", // ES7+ React/Redux/React-Native snippets
 
 				// MongoDB
 				"mongodb.mongodb-vscode", // MongoDB for VS Code
