--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
             "request": "launch",
             "type": "chrome",
             "url": "http://localhost:3000",
-            "webRoot": "${workspaceFolder}/frontend",
+            "webRoot": "${workspaceFolder}/frontend/src",
             "preLaunchTask": "npm: start - frontend"
         }
     ],
