--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,8 +6,25 @@
     // Java
     "java.compile.nullAnalysis.mode": "automatic",
     "java.configuration.updateBuildConfiguration": "automatic",
+    "java.sharedIndexes.enabled": "on",
+    "java.saveActions.organizeImports": true,
+    "java.server.launchMode": "Standard",
 
     // Thunder Client
     "thunder-client.saveToWorkspace": true,
-    "thunder-client.sidebar.defaultTab": "Collections"
+    "thunder-client.sidebar.defaultTab": "Collections",
+
+    // Prettier
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "[javascript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode",
+        //"editor.formatOnSave": true
+    },
+    "[java]": {
+        "editor.defaultFormatter": "redhat.java"
+    },
+
+    // JavaScript
+    "javascript.preferences.importModuleSpecifier": "project-relative",
+    "javascript.suggest.paths": false
 }
