--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,30 +1,35 @@
 {
-    // General
-    "extensions.ignoreRecommendations": true,
-    "debug.toolBarLocation": "docked",
+  // General
+  "extensions.ignoreRecommendations": true,
+  "debug.toolBarLocation": "docked",
 
-    // Java
-    "java.compile.nullAnalysis.mode": "automatic",
-    "java.configuration.updateBuildConfiguration": "automatic",
-    "java.sharedIndexes.enabled": "on",
-    "java.saveActions.organizeImports": true,
-    "java.server.launchMode": "Standard",
+  // Java
+  "java.compile.nullAnalysis.mode": "automatic",
+  "java.configuration.updateBuildConfiguration": "automatic",
+  "java.sharedIndexes.enabled": "on",
+  "java.saveActions.organizeImports": true,
+  "java.server.launchMode": "Standard",
 
-    // Thunder Client
-    "thunder-client.saveToWorkspace": true,
-    "thunder-client.sidebar.defaultTab": "Collections",
+  // Thunder Client
+  "thunder-client.saveToWorkspace": true,
+  "thunder-client.sidebar.defaultTab": "Collections",
 
-    // Prettier
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "[javascript]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode",
-        //"editor.formatOnSave": true
-    },
-    "[java]": {
-        "editor.defaultFormatter": "redhat.java"
-    },
+  // Prettier
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+    //"editor.formatOnSave": true
+  },
+  "[java]": {
+    "editor.defaultFormatter": "redhat.java"
+  },
 
-    // JavaScript
-    "javascript.preferences.importModuleSpecifier": "project-relative",
-    "javascript.suggest.paths": false
+  // JavaScript
+  "javascript.preferences.importModuleSpecifier": "project-relative",
+  "javascript.suggest.paths": false,
+
+  // Emmet for JSX
+  "emmet.includeLanguages": {
+    "javascript": "javascriptreact"
+  }
 }
