--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,19 +9,19 @@
   "java.sharedIndexes.enabled": "on",
   "java.saveActions.organizeImports": true,
   "java.server.launchMode": "Standard",
+  //"[java]": {
+  //  "editor.defaultFormatter": "redhat.java"
+  //},
 
   // Thunder Client
   "thunder-client.saveToWorkspace": true,
   "thunder-client.sidebar.defaultTab": "Collections",
 
   // Prettier
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "[javascript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-    //"editor.formatOnSave": true
-  },
-  "[java]": {
-    "editor.defaultFormatter": "redhat.java"
+  //"editor.defaultFormatter": "esbenp.prettier-vscode",
+  "[javascript][javascriptreact]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.formatOnSave": true
   },
 
   // JavaScript
@@ -31,5 +31,8 @@
   // Emmet for JSX
   "emmet.includeLanguages": {
     "javascript": "javascriptreact"
-  }
+  },
+
+  // Resource monitor
+  "resmon.show.cpufreq": false
 }
