--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -104,7 +104,7 @@
 
   // Additional mounts
   "mounts": [
-    //"source=/etc/localtime,target=/etc/localtime,type=bind,readonly"  // Sync container timezone with the host
+    "source=/etc/localtime,target=/etc/localtime,type=bind,readonly"  // Sync container timezone with the host
     //"source=vscode-extensions,target=/home/vscode/.vscode-server/extensions,type=volume"
   ]
 }
